# easycon-assignment

./: .gitignore  README.md  docker-compose.yaml  init.sql
backend_app/: pyproject.toml
backend_app/src/backend/webapi/: asgi.py  settings.py  urls.py  views.py  wsgi.py
backend_app/src/backend/webapi/model/: record_metadata.py
backend_app/src/backend/webapi/service/: mongodb.py  mqtt_client.py  postgresql.py
backend_app/tests/: test_views.py
config/: modbus_client_config.json  modbus_client_secure_config.json  modbus_server_config.json  modbus_server_secure_config.json  mqtt_publisher_config.json  mqtt_subscriber_config.json
docs/: openapi.yaml  system.drawio
modbus_client/: pyproject.toml
modbus_client/src/client/: __main__.py  client_factory.py  data_consumer.py  decoder.py  reader.py
modbus_client/src/client/model/: weather_info.py
modbus_server/: pyproject.toml
modbus_server/src/server/: __main__.py  context_factory.py  data_consumer.py  encoder.py  server.py  updater.py  weather_data_provider.py
mosquitto/config/: mosquitto.conf
mqtt_publisher/: pyproject.toml
mqtt_publisher/src/publisher/: __main__.py  data_provider.py  publisher.py
mqtt_subscriber/: pyproject.toml
mqtt_subscriber/src/subscriber/: __main__.py  data_consumer.py  mqtt_client_factory.py  subscriber.py
mqtt_subscriber/src/subscriber/model/: message.py
